fix: don't line break the action icons

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -431,7 +431,7 @@ td {
   overflow: hidden;
 
   &.actions {
-    white-space: normal;
+    white-space: nowrap;
     overflow: visible;
   }
 
